add functions and events, photos, selectors, styles
Co-Authored-By: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,30 +16,33 @@
     <form id="horse">
       <label for="interest">How do you feel about horses?</label>
       <select id="interest">
+        <option value="Neutral">Choose One</option>
         <option value="love">Love</option>
         <option value="hate">Hate</option>
       </select>
-
-      <label for="love">On a scale of 1-10, how much do you love horses?</label>
-      <input id="love" type="text">
-      <label for="hate">On a scale of 1-10, how much do you hate horses?</label>
-      <input id="hate" type="text">
-
+      <div id="love-scale">
+        <label for="love">On a scale of 1-10, how much do you love horses?</label>
+        <input id="love" type="text">
+      </div>  
+      <div id="hate-scale">
+        <label for="hate">On a scale of 1-10, how much do you hate horses?</label>
+        <input id="hate" type="text">
+      </div>
       <button type="submit" class="btn">Who Will Gallop into the Horizon with Me?</button>
     </form>
 
     <div id="stewart">
-      <img src= "">
+      <img src="https://i.ytimg.com/vi/CqvKFWVmvIk/maxresdefault.jpg" alt="kristen stewart">
       <p>You will instead walk into the horizon with the lovely Kristen Stewart, as she is famously terrified of horses. $<span id="rate"></span></p>
     </div>
 
     <div id="busey">
-      <img src= "">
-      <p>You will ride into the horizon with the formidable Gary Busey, though he will be riding a donkey that he 100% believes is a horse. $<span id="rate"></span></p>
+      <img src="https://i.dailymail.co.uk/i/newpix/2018/10/08/23/5122452200000578-0-image-a-2_1539038817871.jpg" alt="gary busey">
+      <p>You will ride into the horizon on the formidable Gary Busey, who 100% believes he is a horse. $<span id="rate"></span></p>
     </div>
 
     <div id="foxx">
-      <img src= "">
+      <img src="https://www.geo.tv/assets/uploads/updates/2019-11-27/258752_8473624_updates.jpg" alt="jamie foxx">
       <p>You will ride into the horizon with the multi-talented Jamie Foxx, who famously fell in love with his horse on the set of Django Unchained. $<span id="rate"></span></p>
     </div>
   </div>
