work with event handlers for selection boxes, display stylings in css
Co-Authored-By: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form id="horse">
       <label for="interest">How do you feel about horses?</label>
       <select id="interest">
-        <option value="Neutral">Choose One</option>
+        <option value="neutral">Choose One</option>
         <option value="love">Love</option>
         <option value="hate">Hate</option>
       </select>
