fix hide/show functions on love-scale/hate-scale elements, add spans and css stylings to output text, resize output photos, fill-in readme
Co-Authored-By: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="js/scripts.js"></script>
   <title>Celebrity Dating Quiz</title>
 </head>
+<div style="background-image: url('');">
 <body>
   <div class="container">
     <h1>Celebrity Dating Quiz</h1>
@@ -16,7 +17,7 @@
     <form id="horse">
       <label for="interest">How do you feel about horses?</label>
       <select id="interest">
-        <option value="neutral">Choose One</option>
+        <option value="">Choose One</option>
         <option value="love">Love</option>
         <option value="hate">Hate</option>
       </select>
@@ -28,22 +29,22 @@
         <label for="hate">On a scale of 1-10, how much do you hate horses?</label>
         <input id="hate" type="text">
       </div>
-      <button type="submit" class="btn">Who Will Gallop into the Horizon with Me?</button>
+      <button type="submit" class="btn btn-danger">Who Will Gallop into the Horizon with Me?</button>
     </form>
 
     <div id="stewart">
+      <h2>You will instead walk into the horizon with the lovely <span class="text3">Kristen Stewart</span>, as she is famously terrified of horses.</h2>
       <img src="https://i.ytimg.com/vi/CqvKFWVmvIk/maxresdefault.jpg" alt="kristen stewart">
-      <p>You will instead walk into the horizon with the lovely Kristen Stewart, as she is famously terrified of horses. $<span id="rate"></span></p>
     </div>
 
     <div id="busey">
+      <h2>You will ride into the horizon on the formidable <span class="text2">Gary Busey</span>, who 100% believes he is a horse.</h2>
       <img src="https://i.dailymail.co.uk/i/newpix/2018/10/08/23/5122452200000578-0-image-a-2_1539038817871.jpg" alt="gary busey">
-      <p>You will ride into the horizon on the formidable Gary Busey, who 100% believes he is a horse. $<span id="rate"></span></p>
     </div>
 
     <div id="foxx">
+      <h2>You will ride into the horizon with the multi-talented <span class="text1">Jamie Foxx</span>, who notably fell in love with his horse on the set of Django Unchained.</h2>
       <img src="https://www.geo.tv/assets/uploads/updates/2019-11-27/258752_8473624_updates.jpg" alt="jamie foxx">
-      <p>You will ride into the horizon with the multi-talented Jamie Foxx, who famously fell in love with his horse on the set of Django Unchained. $<span id="rate"></span></p>
     </div>
   </div>
 </body>
